Refactoring Server.js

--- a/Server/package.json
+++ b/Server/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "express": "^4.13.2"
+    "body-parser": "^4.13.3",
+    "express": "^4.13.2",
+    "underscore": "^1.8.3"
   }
 }
