--- a/Server/package.json
+++ b/Server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leaderboardunity",
   "version": "1.0.0",
-  "description": "Leaderboard project for Unity. Written in Node.js",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "underscore": "^1.8.3"
-  }
+    "express": "^4.13.2",
+    "body-parser":"^4.13.3",
+    "underscore":"^1.8.3",
+    "sqlite3": "^3.1.8",
+    "sequelize":"^3.5.1"
+    }
 }
