--- a/Server/package.json
+++ b/Server/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.13.2",
-    "body-parser":"^4.13.3",
-    "underscore":"^1.8.3",
+    "sequelize": "^3.5.1",
     "sqlite3": "^3.1.8",
-    "sequelize":"^3.5.1"
-    }
+    "underscore": "^1.8.3"
+  }
 }
