--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.13.2",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.5.1",
     "sqlite3": "^3.1.8",
     "underscore": "^1.8.3"
